Fixed scrollbars and paintbucket select bug

--- a/Planner/static/core_app/css/3-modules/_planner-widget.sass
+++ b/Planner/static/core_app/css/3-modules/_planner-widget.sass
@@ -9,6 +9,12 @@
     position: absolute
     right: 35%
 
+  .selected-semester-label
+    font-weight: 200
+    font-size: 1.2em
+    position: absolute
+    right: 10%
+
   .template-table
     position: absolute
     top: 5%
@@ -50,6 +56,7 @@
               border-right: 1px solid black
 
               div
+                overflow: hidden
                 height: 100%
                 display: flex
                 flex-direction: column
@@ -57,6 +64,9 @@
                 justify-content: center
 
                 span
+                  width: 100%
+                  text-align: center
+                  white-space: normal
                   font-weight: 200
                   color: inherit
 
@@ -88,7 +98,7 @@
     top: 5%
     left: 70%
     height: 80%
-    background-color: #F5F5F5
+    background-color: #FFFFFF
     border: 1px solid black
 
     .semester-heading-adder
@@ -177,5 +187,5 @@
               width: 100%
               background-color: inherit
               z-index: 5
-              opacity: 0.4
+              opacity: 0.5
               pointer-events: none
