--- a/Planner/static/core_app/css/4-pages/_planner.sass
+++ b/Planner/static/core_app/css/4-pages/_planner.sass
@@ -21,3 +21,6 @@
 
 html
   overflow-Y: hidden
+
+::-webkit-scrollbar 
+    display: none
